# uroflowmetry-app

./: CNAME  LICENSE  README.md  local.properties  readme_to_build.docx  settings.gradle
app/: CMakeLists.txt  LICENSE.txt  build.gradle
app/opencv/include/opencv2/: ml.hpp
app/opencv/include/opencv2/core/: directx.hpp
app/opencv/include/opencv2/flann/: random.h
app/src/main/: AndroidManifest.xml  cpp_java.rar
app/src/main/cpp/: UroflowmetryNative.cpp  UroflowmetryNative.h
app/src/main/res/anim/: anim_nothing1.xml  anim_rotate.xml  anim_slide_down.xml  anim_slide_down2.xml  anim_slide_in_left.xml  anim_slide_in_right.xml  anim_slide_in_top.xml  anim_slide_out_left.xml  anim_slide_out_right.xml  anim_slide_up.xml  anim_slide_up2.xml  anim_stay.xml  bottom_in.xml  bottom_out.xml  fade_in.xml  fade_out.xml  left_in.xml  left_out.xml  right_in.xml  right_out.xml  top_in.xml  top_out.xml
app/src/main/res/drawable/: background_circle_navy.xml  background_circle_red.xml  background_rounded_green.xml  background_rounded_outline.xml  background_rounded_outline_green.xml  background_rounded_white.xml  ic_add_box_black_24px.xml  ic_bar_chart_24px.xml  ic_email_white_24px.xml  ic_videocam_24px.xml
app/src/main/res/layout/: activity_add_volume.xml  activity_camera.xml  activity_data.xml  activity_login.xml  activity_main.xml  activity_measure_volume.xml  activity_profile.xml  activity_signup.xml  activity_splash.xml  activity_video.xml  activity_volume.xml  dialog_add_volume.xml  item_data.xml  item_volume.xml
app/src/main/res/values-large/: dimens.xml
docs/: index.html  (+3 more)
(+47 files in other folders)
